kube/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-frontend-search
  namespace: core-frontend
  labels:
    app: core-frontend-search
spec:
  type: ClusterIP
  selector:
    app: core-frontend-search
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
